[package]
name = "upload"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
env_logger = "0.11.8"
humantime = "2.2.0"
log = "0.4.27"
qiniu-sdk = { version = "0.2.4", features = ["upload"] }
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde = "1.0.219"
serde_json = "1.0.143"
