[package]
name = "upload"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
fern = "0.7.1"
log = "0.4.27"
qiniu-sdk = { version = "0.2.4", features = ["upload"] }
serde = "1.0.219"
serde_json = { version = "1.0.143", default-features = false }


[profile.release]
lto = true        # 链接时优化
codegen-units = 1 # 减少并行代码生成单元以提高优化
panic = "abort"   # 使用 abort 而不是 unwind 减少 panic 处理代码
opt-level = "z"   # 优化大小而非速度
strip = true      # 剥离调试符号
